syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

//Request suffix on Request
message GreetRequest {
    Greeting greeeting = 1;
}

//Response suffix on Response
message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetWithDeadlinesRequest {
    Greeting greeting = 1;
}

message GreetWithDeadlinesResponse {
    string result = 1;
}

//Add Service suffix on Service Name
service GreetService {
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    //Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
    //Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
    //Bi-Directional Streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
    //Greet with Deadlines
    rpc GreetWithDeadlines(GreetWithDeadlinesRequest) returns (GreetWithDeadlinesResponse) {};
}